--- a/frontend/src/app/components/measurement-list/measurement-list.page.html
+++ b/frontend/src/app/components/measurement-list/measurement-list.page.html
@@ -27,9 +27,9 @@
         <br>
         <!--Si la variable llista es diferent a Null, mostrem els titols de les columnes-->
         <ion-list-header *ngIf="llista" >
-          <ion-label>   Name</ion-label>
-          <ion-label>   State</ion-label>
-          <ion-label>   Description</ion-label>
+          <ion-label style="padding-left:20px">   Name</ion-label>
+          <ion-label style="padding-left:60px">   State</ion-label>
+          <ion-label style="padding-left:80px">   Description</ion-label>
           <ion-label></ion-label>
           <ion-label></ion-label>
         </ion-list-header>
