--- a/frontend/src/app/components/add-measurement/add-measurement.component.html
+++ b/frontend/src/app/components/add-measurement/add-measurement.component.html
@@ -13,7 +13,7 @@
       <div style="background: url('/assets/img/background2.png')" class="wrap-login100 p-l-15 p-r-15 p-t-15 p-b-15">
         <form class="login100-form validate-form">
           <span class="login100-form-title p-b-49">
-            Add an empty measurement
+            Add a new measurement
           </span>
           <form [formGroup]="Form">
             <ion-list>
