--- a/frontend/src/app/components/measurement-list/measurement-list.page.html
+++ b/frontend/src/app/components/measurement-list/measurement-list.page.html
@@ -1,4 +1,3 @@
-<!-- insertar aqui menu heypey-->
 
 
 <ion-header>
@@ -37,7 +36,7 @@
           <ion-item>
             <ion-label>{{element.name}}</ion-label>
             <ion-label>{{element.state}}</ion-label>
-            <ion-label>{{element.description}}</ion-label>
+            <ion-label class="ion-text-wrap">{{element.description}}</ion-label>
             <ion-button class="list-buttons" shape="round" expand="full" color="dark" (click)="botoLlista(element._id, element.name)" >
               <ion-label style="padding-left:7px; padding-right:3px">  State </ion-label>
               <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
