--- a/frontend/src/app/components/main-menu/main-menu.component.scss
+++ b/frontend/src/app/components/main-menu/main-menu.component.scss
@@ -66,18 +66,30 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-  font-family: Poppins-Regular;
-  font-size: 14px;
+  font-family: Poppins-SemiBold;
+  font-size: 30px;
   line-height: 1.7;
-  color: #666666;
-  margin: 0px;
+  color: #0a0f40;
+  text-align: center;
+  width: 100%;
 }
 
 .q {
   font-family: Poppins-Regular;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 1.7;
-  color: #000000;
+  color: #0a0f40;
+  margin: 0px;
+  text-align: center;
+  width: 100%;
+}
+
+.q2 {
+  display: block;
+  font-family: Poppins-Regular;
+  font-size: 17px;
+  line-height: 1.7;
+  color: #f5f8ff;
   margin: 10px;
   text-align: center;
   width: 100%;
@@ -193,10 +205,8 @@ iframe {
 
 }
 
-
-
 .wrap-login100 {
-  width: 500px;
+  width: 600px;
   background: #fff;
   border-radius: 10px;
   overflow: hidden;
@@ -214,9 +224,10 @@ iframe {
   display: block;
   font-family: Poppins-Bold;
   font-size: 39px;
-  color: #333333;
+  color: #f5f8ff;
   line-height: 1.2;
   text-align: center;
+  width: 100%;
 }
 
 
@@ -330,7 +341,7 @@ iframe {
 }
 
 .wrap-login100-form-btn {
-  width: 100%;
+  width: 50%;
   display: block;
   position: relative;
   z-index: 1;
@@ -493,4 +504,47 @@ iframe {
     padding-left: 15px;
     padding-right: 15px;
   }
+}
+/*//////////////////////////////////////////////////////////////////
+[ List ]*/
+li {
+  display:inline;
+  padding: 10px 30px;
+}
+.list_titles {
+}
+.list_items {
+  word-spacing: 30px;
+  font-family: Poppins-Regular;
+  font-size: 14px;
+  line-height: 1.7;
+  color: #666666;
+  margin: 0px;
+}
+.list_btn1 {
+  background-color: rgb(99, 216, 219); /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+.list_btn2 {
+  background-color: rgb(234, 70, 249); /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
+
+.displayed {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
