resistencia valor minimo 0 (no hay resistencias negativas)

--- a/frontend/src/app/components/add-resistance/add-resistance.component.html
+++ b/frontend/src/app/components/add-resistance/add-resistance.component.html
@@ -25,7 +25,7 @@
               <ion-item>
                 <ion-icon name="add" item-start></ion-icon>
                 <ion-label stacked>Value [kΩ]:</ion-label>
-                <ion-input formControlName="value" type="number" placeholder="Value"></ion-input>
+                <ion-input formControlName="value" type="number" min="0" placeholder="Value"></ion-input>
               </ion-item>
               <ion-item>
                 <ion-icon name="add" item-start></ion-icon>
